--- a/diss.bib
+++ b/diss.bib
@@ -1,9 +1,253 @@
+@article{parker2010updated,
+  title={Updated national birth prevalence estimates for selected birth defects in the United States, 2004--2006},
+  author={Parker, Samantha E and Mai, Cara T and Canfield, Mark A and Rickard, Russel and Wang, Ying and Meyer, Robert E and Anderson, Patrick and Mason, Craig A and Collins, Julianne S and Kirby, Russell S and others},
+  journal={Birth Defects Research Part A: Clinical and Molecular Teratology},
+  volume={88},
+  number={12},
+  pages={1008--1016},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{Selvaraju2016GradCAMVE,
+  title={Grad-CAM: Visual Explanations from Deep Networks via Gradient-Based Localization},
+  author={Ramprasaath R. Selvaraju and Abhishek Das and Ramakrishna Vedantam and Michael Cogswell and Devi Parikh and Dhruv Batra},
+  journal={International Journal of Computer Vision},
+  year={2016},
+  volume={128},
+  pages={336 - 359},
+  url={https://api.semanticscholar.org/CorpusID:15019293}
+}
+
+@article{Filho_2019,
+doi = {10.1088/2057-1976/ab08fc},
+url = {https://dx.doi.org/10.1088/2057-1976/ab08fc},
+year = {2019},
+month = {mar},
+publisher = {IOP Publishing},
+volume = {5},
+number = {3},
+pages = {035003},
+author = {Antonio Carlos da S Senra Filho and Fabrício Henrique Simozo and Antonio Carlos dos Santos and Luiz Otavio Murta Junior},
+title = {Multiple Sclerosis multimodal lesion simulation tool (MS-MIST)},
+journal = {Biomedical Physics & Engineering Express},
+}
+
+@INPROCEEDINGS{gradcam,
+  author={Selvaraju, Ramprasaath R. and Cogswell, Michael and Das, Abhishek and Vedantam, Ramakrishna and Parikh, Devi and Batra, Dhruv},
+  booktitle={2017 IEEE International Conference on Computer Vision (ICCV)}, 
+  title={Grad-CAM: Visual Explanations from Deep Networks via Gradient-Based Localization}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={618-626},
+  keywords={Visualization;Cats;Dogs;Computer architecture;Knowledge discovery},
+  doi={10.1109/ICCV.2017.74}
+}
+
+@article{Simonyan2013DeepIC,
+  title={Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps},
+  author={Karen Simonyan and Andrea Vedaldi and Andrew Zisserman},
+  journal={CoRR},
+  year={2013},
+  volume={abs/1312.6034},
+  url={https://api.semanticscholar.org/CorpusID:1450294}
+}
+
+@incollection{NIPS2017_7062,
+title = {A Unified Approach to Interpreting Model Predictions},
+author = {Lundberg, Scott M and Lee, Su-In},
+booktitle = {Advances in Neural Information Processing Systems 30},
+editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+pages = {4765--4774},
+year = {2017},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/7062-a-unified-approach-to-interpreting-model-predictions.pdf}
+}
+
+@article{aelu2023,
+title = {Unsupervised anomaly detection in brain MRI: Learning abstract distribution from massive healthy brains},
+journal = {Computers in Biology and Medicine},
+volume = {154},
+pages = {106610},
+year = {2023},
+issn = {0010-4825},
+doi = {https://doi.org/10.1016/j.compbiomed.2023.106610},
+url = {https://www.sciencedirect.com/science/article/pii/S0010482523000756},
+author = {Guoting Luo and Wei Xie and Ronghui Gao and Tao Zheng and Lei Chen and Huaiqiang Sun},
+keywords = {Anomaly detection, Unsupervised learning, Autoencoder, Brain MRI},
+}
+@article{kascenas2023,
+  title = {The Role of Noise in Denoising Models for Anomaly Detection in Medical Images},
+  author = {Kascenas, Antanas and Sanchez, Pedro and Schrempf, Patrick and Wang, Chaoyang and Clackett, William and Mikhael, Shadia S. and Voisey, Jeremy P and Goatman, Keith and Weir, Alexander and Pugeault, Nicolas and Tsaftaris, Sotirios A and O’Neil, Alison Q},
+  year = {2023},
+  journaltitle = {Medical Image Analysis},
+  volume = {90},
+  pages = {102963},
+  issn = {1361-8415},
+  doi = {10.1016/j.media.2023.102963},
+  url = {https://www.sciencedirect.com/science/article/pii/S1361841523002232},
+  keywords = {Anomaly detection,Autoencoder,Denoising,Diffusion,Unsupervised learning}
+}
+
+@InProceedings{pmlr-v102-you19a,
+  title = 	 {Unsupervised Lesion Detection via Image Restoration with a Normative Prior},
+  author =       {You, Suhang and Tezcan, Kerem C. and Chen, Xiaoran and Konukoglu, Ender},
+  booktitle = 	 {Proceedings of The 2nd International Conference on Medical Imaging with Deep Learning},
+  pages = 	 {540--556},
+  year = 	 {2019},
+  editor = 	 {Cardoso, M. Jorge and Feragen, Aasa and Glocker, Ben and Konukoglu, Ender and Oguz, Ipek and Unal, Gozde and Vercauteren, Tom},
+  volume = 	 {102},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {08--10 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v102/you19a/you19a.pdf},
+  url = 	 {https://proceedings.mlr.press/v102/you19a.html},
+}
+
+@inproceedings{behrendtPatchedDiffusionModels2023,
+  title = {Patched {{Diffusion Models}} for {{Unsupervised Anomaly Detection}} in {{Brain MRI}}},
+  booktitle = {Medical {{Imaging}} with {{Deep Learning}}},
+  author = {Behrendt, Finn and Bhattacharya, Debayan and Krüger, Julia and Opfer, Roland and Schlaefer, Alexander},
+  year = {2023}
+}
+
+@inproceedings{grahamDenoisingDiffusionModels2023,
+  title = {Denoising Diffusion Models for Out-of-Distribution Detection},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Graham, Mark S and Pinaya, Walter HL and Tudosiu, Petru-Daniel and Nachev, Parashkev and Ourselin, Sebastien and Cardoso, Jorge},
+  year = {2023},
+  pages = {2947--2956}
+}
+
+@article{liuUnsupervisedOutofDistributionDetection2023,
+  title = {Unsupervised {{Out-of-Distribution Detection}} with {{Diffusion Inpainting}}},
+  author = {Liu, Zhenzhen and Zhou, Jin Peng and Wang, Yufan and Weinberger, Kilian Q},
+  year = {2023}
+}
+
+
+@article{pacmap,
+  author  = {Yingfan Wang and Haiyang Huang and Cynthia Rudin and Yaron Shaposhnik},
+  title   = {Understanding How Dimension Reduction Tools Work: An Empirical Approach to Deciphering t-SNE, UMAP, TriMap, and PaCMAP for Data Visualization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2021},
+  volume  = {22},
+  number  = {201},
+  pages   = {1--73},
+  url     = {http://jmlr.org/papers/v22/20-1061.html}
+}
+
+@article{leiQuantifyingImpactUninformative2023,
+  title = {Quantifying the Impact of Uninformative Features on the Performance of Supervised Classification and Dimensionality Reduction Algorithms},
+  author = {Lei, Weihua and Zanchettin, Cleber and Ho, Zoey E. and Nunes Amaral, Luís A.},
+  year = {2023},
+  journaltitle = {APL Machine Learning},
+  volume = {1},
+  number = {4},
+  pages = {046118},
+  issn = {2770-9019},
+  doi = {10.1063/5.0170229},
+  url = {https://pubs.aip.org/aml/article/1/4/046118/2928862/Quantifying-the-impact-of-uninformative-features},
+  urldate = {2024-03-15},
+}
+
+@article{kohonen1990self,
+  title={The self-organizing map},
+  author={Kohonen, Teuvo},
+  journal={Proceedings of the IEEE},
+  volume={78},
+  number={9},
+  pages={1464--1480},
+  year={1990},
+  publisher={IEEE}
+}
+
+@misc{mcinnes2020umap,
+      title={UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction}, 
+      author={Leland McInnes and John Healy and James Melville},
+      year={2020},
+      eprint={1802.03426},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{hamnerPediatricBrainDevelopment2018,
+  title = {Pediatric {{Brain Development}} in {{Down Syndrome}}: {{A Field}} in {{Its Infancy}}},
+  shorttitle = {Pediatric {{Brain Development}} in {{Down Syndrome}}},
+  author = {Hamner, Taralee and Udhnani, Manisha D. and Osipowicz, Karol Z. and Lee,Nancy Raitano},
+  year = {2018},
+  journaltitle = {Journal of the International Neuropsychological Society},
+  shortjournal = {J Int Neuropsychol Soc},
+  volume = {24},
+  number = {9},
+  pages = {966--976},
+  issn = {1355-6177, 1469-7661},
+  doi = {10.1017/S1355617718000206},
+  url = {https://www.cambridge.org/core/product/identifier/S1355617718000206/type/journal_article},
+  urldate = {2023-02-04},
+  langid = {english},
+}
+
+@Article{brainsci12040439,
+AUTHOR = {Weerasekera, Akila and Ion-Mărgineanu, Adrian and Nolan, Garry and Mody, Maria},
+TITLE = {Subcortical Brain Morphometry Differences between Adults with Autism Spectrum Disorder and Schizophrenia},
+JOURNAL = {Brain Sciences},
+VOLUME = {12},
+YEAR = {2022},
+NUMBER = {4},
+ARTICLE-NUMBER = {439},
+URL = {https://www.mdpi.com/2076-3425/12/4/439},
+PubMedID = {35447970},
+ISSN = {2076-3425},
+DOI = {10.3390/brainsci12040439}
+}
+
+@article{giraultNeurodevelopmentAutismInfancy2020,
+  title = {The {{Neurodevelopment}} of {{Autism}} from {{Infancy Through Toddlerhood}}},
+  author = {Girault, Jessica B. and Piven, Joseph},
+  year = {2020},
+  journaltitle = {Neuroimaging Clinics of North America},
+  shortjournal = {Neuroimaging Clin N Am},
+  volume = {30},
+  number = {1},
+  eprint = {31759576},
+  eprinttype = {pmid},
+  pages = {97--114},
+  issn = {1557-9867},
+  doi = {10.1016/j.nic.2019.09.009},
+  langid = {english},
+  pmcid = {PMC6878903},
+  keywords = {Autism spectrum disorder,Autism Spectrum Disorder,Brain,Child Preschool,Diffusion tensor imaging,Humans,Infant,Infant Newborn,Magnetic Resonance Imaging,MR imaging,Neurodevelopment,Neuroimaging,Prognosis,Prospective Studies,Psychoradiology},
+}
+
+
+@article{shenSubcorticalBrainDevelopment2022,
+  title = {Subcortical {{Brain Development}} in {{Autism}} and {{Fragile X Syndrome}}: {{Evidence}} for {{Dynamic}}, {{Age-}} and {{Disorder-Specific Trajectories}} in {{Infancy}}},
+  shorttitle = {Subcortical {{Brain Development}} in {{Autism}} and {{Fragile X Syndrome}}},
+  author = {Shen, Mark D. and Swanson, Meghan R. and Wolff, Jason J. and Elison, Jed T. and Girault, Jessica B. and Kim, Sun Hyung and Smith, Rachel G. and Graves, Michael M. and Weisenfeld, Leigh Anne H. and Flake, Lisa and MacIntyre, Leigh and Gross, Julia L. and Burrows, Catherine A. and Fonov, Vladimir S. and Collins, D. Louis and Evans, Alan C. and Gerig, Guido and McKinstry, Robert C. and Pandey, Juhi and St John, Tanya and Zwaigenbaum, Lonnie and Estes, Annette M. and Dager, Stephen R. and Schultz, Robert T. and Styner, Martin A. and Botteron, Kelly N. and Hazlett, Heather C. and Piven, Joseph and {IBIS Network}},
+  year = {2022},
+  journaltitle = {The American Journal of Psychiatry},
+  shortjournal = {Am J Psychiatry},
+  volume = {179},
+  number = {8},
+  eprint = {35331012},
+  eprinttype = {pmid},
+  pages = {562--572},
+  issn = {1535-7228},
+  doi = {10.1176/appi.ajp.21090896},
+  langid = {english},
+  pmcid = {PMC9762548},
+  keywords = {Adolescent,Adult,Amygdala,Autism Spectrum Disorder,Autistic Disorder,Brain,Caudate,Child,Child Preschool,Fragile X Syndrome,Humans,Infant,Magnetic Resonance Imaging,Neurodevelopmental Disorders,Neuroimaging,Young Adult},
+}
+
+
 @inproceedings{dae-kascenas22a,
   title = {Denoising Autoencoders for Unsupervised Anomaly Detection in Brain {{MRI}}},
   booktitle = {Proceedings of the 5th International Conference on Medical Imaging with Deep Learning},
   author = {Kascenas, Antanas and Pugeault, Nicolas and O'Neil, Alison Q.},
   editor = {Konukoglu, Ender and Menze, Bjoern and Venkataraman, Archana and Baumgartner, Christian and Dou, Qi and Albarqouni, Shadi},
-  date = {2022-07-06/2022-07-08},
+  year = {2022},
   series = {Proceedings of Machine Learning Research},
   volume = {172},
   pages = {653--664},
@@ -11,19 +255,11 @@
   url = {https://proceedings.mlr.press/v172/kascenas22a.html},
 }
 
-@inproceedings{grahamDenoisingDiffusionModels2023,
-  title = {Denoising Diffusion Models for Out-of-Distribution Detection},
-  booktitle = {Proceedings of the {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
-  author = {Graham, Mark S and Pinaya, Walter HL and Tudosiu, Petru-Daniel and Nachev, Parashkev and Ourselin, Sebastien and Cardoso, Jorge},
-  date = {2023},
-  pages = {2947--2956},
-}
-
 @inproceedings{wyattAnoddpmAnomalyDetection2022,
   title = {Anoddpm: {{Anomaly}} Detection with Denoising Diffusion Probabilistic Models Using Simplex Noise},
   booktitle = {Proceedings of the {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
   author = {Wyatt, Julian and Leach, Adam and Schmon, Sebastian M and Willcocks, Chris G},
-  date = {2022},
+  year = {2022},
   pages = {650--656},
 }
 
@@ -146,7 +382,6 @@ year = {2019}
   author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
   volume={32},
-  number={1},
   year={2018}
 }
 
@@ -360,6 +595,24 @@ year={2018},
   pages={770--778},
   year={2016}
 }
+@article{fedorov3DSlicerImage2012,
+  title = {{{3D Slicer}} as an Image Computing Platform for the {{Quantitative Imaging Network}}.},
+  author = {Fedorov, Andriy and Beichel, Reinhard and Kalpathy-Cramer, Jayashree and Finet, Julien and Fillion-Robin, Jean-Christophe and Pujol, Sonia and Bauer, Christian and Jennings, Dominique and Fennessy, Fiona and Sonka, Milan and Buatti, John and Aylward, Stephen and Miller, James V. and Pieper, Steve and Kikinis, Ron},
+  year = {2012},
+  journaltitle = {Magnetic resonance imaging},
+  shortjournal = {Magn Reson Imaging},
+  volume = {30},
+  number = {9},
+  eprint = {22770690},
+  eprinttype = {pmid},
+  pages = {1323--1341},
+  location = {{Netherlands}},
+  issn = {1873-5894 0730-725X},
+  doi = {10.1016/j.mri.2012.05.001},
+  langid = {english},
+  pmcid = {PMC3466397},
+}
+
 
 @article{Casey2018adolescent,
   title={The adolescent brain cognitive development (ABCD) study: imaging acquisition across 21 sites},
