viz chapter wip

--- a/ch4.tex
+++ b/ch4.tex
@@ -1,14 +1,14 @@
 \chapter{Demystifying Neurodivergence via Score Estimators }
 \label{ch:localizing}
 
-Atypically developing children are diagnosed through clinical assessments that measure behavioral response. While effective in diagnosis, behavioral assessments do not provide any insight into the differences in brain morphometry of the neurodivergent cohort. Existing analyses primarily look at group wise differences of brain features (such as region volumes) between cohorts~\cite{giraultNeurodevelopmentAutismInfancy2020,hamnerPediatricBrainDevelopment2018}, or correlations of said features with a behavioral assessment~\cite{shenSubcorticalBrainDevelopment2022,brainsci12040439}. These analyses fail to produce specific causal relationships between the brain regions and the neurodivergence, as they mainly focus on correlational evidence. Furthermore, the researchers introduce their own preconceived biases when they select the features and regions of interest (ROIs) to be studied. [Example here?]
+Atypically developing children are diagnosed through clinical assessments that measure behavioral response. While effective in diagnosis, behavioral assessments do not provide any insight into the differences in brain morphometry of the neurodivergent cohort. Existing analyses primarily look at group wise differences of brain features (such as region volumes) between cohorts~\cite{giraultNeurodevelopmentAutismInfancy2020,hamnerPediatricBrainDevelopment2018}, or correlations of said features with a behavioral assessment~\cite{shenSubcorticalBrainDevelopment2022,brainsci12040439}. These analyses fail to produce specific causal relationships between the brain regions and the neurodivergence, as they mainly focus on correlational evidence.
+Furthermore, the researchers introduce additional biases when they select regions of interest (ROIs) to be studied using their preconceived notions about the disease.
 
-Herein lies the opportunity for a data-driven methodology to uncover atypically developing ROIs that are reflected in the data but, may be underexplored in the existing  literature. One can task a model to identify subpopulations that deviate from the typical (via outlier detection), and subsequently highlight the brain ROIs shared across the subpopulations (via localization).  MSMA, alongside its localization augmentation, naturally allows for such data exploration. This chapter will outline a process through which MSMA can be utilized for deriving insights about the data.
-% To limit any biases present in the data, one can choose a wide bearth of samples to arepresent the inliers  
+Herein lies the opportunity for a data-driven methodology to uncover atypically developing ROIs that are reflected in the data but, may be underexplored in the existing  literature. One can task a model to identify subpopulations that deviate from the typical (via outlier detection), and subsequently highlight the brain ROIs shared across the subpopulations (via localization).  MSMA, combined with its localization augmentation, naturally allows for such data exploration. This chapter outlines a process through which MSMA was utilized for deriving insights about brain MRI data.
 
 \section{A Hypothesis Generating Tool}
 
-The previous chapters have demonstrated MSMA's anomaly detection capabilities. At the heart of MSMA is the score-norm vector, which is primarily responsible for creating a space in which the outliers become separable from the inliers. How can one explore this space to gain further insights into the data?
+The previous chapters have demonstrated MSMA's anomaly detection capabilities. At the heart of MSMA is the score-norm vector, which describes a space in which the outliers become separable from the inliers. How can one explore this space to gain further insights into the data?
 
 We can assume that a user exploring the outputs of MSMA will be looking to answer a set of research questions. Examples of the questions may be:
 \begin{itemize}
@@ -50,28 +50,28 @@ Both t-SNE and UMAP aim to find a low-dimensional space that reflects the distan
 
 The Self-Organizing Map, also known as Kohonen Networks, ~\cite{kohonen1990self} produces a two-dimensional grid-like map such that each cell on the map corresponds to a location in the data-space. Nearby cell locations on the grid are closer in the data-space compared to distal cell locations. A cell is commonly also referred to as a 'neuron'.
 
-During training, the method randomly initializes a grid of neurons (cells). Note that the weight vector corresponding to each neuron resides in the data-space. For each data sample we find the closest neuron to the current point. This is referred to as the Best Matching Unit (BMU). The BMU's weights are updated to be closer to the data point. Additionally, the neighboring neurons (in the \textit{grid-space}) are also updated. The latter step is crucial to preserve the topological structure of the data. This procedure is repeated for a pre-defined number of iterations.
+During training, the method randomly initializes a grid of neurons (cells). Note that the weight vector corresponding to each neuron resides in the data-space. For each data sample we find the closest neuron to the current point. This is referred to as the Best Matching Unit (BMU). The BMU's weights are updated to be closer to the data point. Additionally, the neighboring neurons (in the \textit{grid-space}) are also updated. The latter step is crucial to preserve the topological structure of the data. This procedure is repeated for a pre-defined number of iterations. Most online packages implement the batch-learning algorithm described by~\cite{kinouchi2002quick}. The authors improve convergence by initializing the neurons using eigenvectors computed from the data, and by modifying learning objective that uses the full dataset in each weight update rather than a minibatch as in the original algorithm.  I will be using the latter training algorithm.
 
 \subsection*{SOMs Circumvent Dimensionality Reduction}
 
-Note that SOMs operate directly in the high-dimensional data space, computing distances between the data points and the neuron prototypes in this original space. This is in contrast to t-SNE and UMAP, which first project the data into a low-dimensional space, where distance computations may not accurately reflect the true distances in the high-dimensional space. As a result, SOMs can better preserve the structure and relationships within the data, reducing the risk of distortions introduced by dimensionality reduction. The topological constraint on the grid of neurons mainly facilitates the visual organization. 
+Note that SOMs operate directly in the high-dimensional data space, computing distances between the data points and the neuron prototypes in this original space. This is in contrast to t-SNE and UMAP, which first project the data into a low-dimensional space, where distance computations may not accurately reflect the true distances in the high-dimensional space. As a result, SOMs can better preserve the structure and relationships within the data, reducing the risk of distortions introduced by dimensionality reduction. The topological constraint on the grid of neurons mainly facilitates the visual organization.
 
 \subsection*{SOMs Identify Prototypes}
-It is helpful to think of SOM as a vector quantization algorithm with a topological constraint on the codebook of vectors. Thus, each neuron can be interpreted as a prototype in the data-space. The grid-like structure of SOMs provides a natural way to organize these data prototypes. The relative positions of the neurons on the grid reflect their similarities and dissimilarities. This spatial organization can aid in identifying patterns, clusters, and relationships within the data that may not be immediately apparent from a scattered plot produced by techniques like t-SNE or UMAP.
+It is helpful to think of SOM as a vector quantization algorithm with a spatial constraint on the codebook of vectors. Thus, each neuron can be interpreted as a prototype in the data-space. The grid-like structure of SOMs provides a natural way to organize these data prototypes. The relative positions of the neurons on the grid reflect their similarities. This spatial organization can aid in identifying patterns, clusters, or relationships within the data that may not be immediately apparent from a scattered plot produced by techniques like t-SNE or UMAP.
 
-To elucidate how one can use SOM to gain insights about the data, recall that each sample is assigned to one neuron (the sample's BMU). If label information is available, one can tally up the labels of all the samples that are assigned to a given neuron. We can then compute the maximally matching label for each neuron, which is often  overlayed on top of the map visualization to quickly associate the prototype with a subpopulation.
+To elucidate how one can use SOM to gain insights about the data, recall that each sample is assigned to one neuron (the sample's BMU). If class labels are available, one can tally up the labels of all the samples that are assigned to a given neuron. We can then compute the maximally matching label for each neuron, which is often  overlayed on top of the map visualization to quickly associate the prototype with a subpopulation.
 [EXAMPLE in fig]
 
 % One can go further and analyze the hsitogram
 \subsection*{SOM vs tsne for clustering}
 
-\section{Feasability Experiments on Benchmark Datasets }
+\section{Feasibility Experiments on Benchmark Datasets }
 
 \section{Case Study: Detecting Brain ROIs involved in Down Syndrome}
 
-Down Syndrome (DS) is one of the most common neurodevelopmental disorder, occurring at a rate of ~1/700 live births~\cite{parker2010updated}. Studies have revealed large deviations from typical development in brain structure of children with DS, with the most pronounced deviation in the total brain volume (TBV). Further, when TBV is accounted for, studies have revealed deviations in certain subregions such as the temporal lobe, cerebellum, and hippocampus~\cite{hamnerPediatricBrainDevelopment2018}. However, there is still a push for further developing focused research to elucidate the nature of the DS neuroanatomic phenotype~\cite{hamnerPediatricBrainDevelopment2018}.
+Down Syndrome (DS) is one of the most common neurodevelopmental disorder, occurring at a rate of ~1/700 live births~\cite{parker2010updated}. Studies have revealed large deviations from typical development in brain structure of children with DS, with the most pronounced deviation in the total brain volume (TBV). Further, when TBV is accounted for, studies have revealed deviations in specific regions of the brain such as the temporal lobe, cerebellum, and hippocampus~\cite{hamnerPediatricBrainDevelopment2018}. However, there remains a push for developing focused research to elucidate the nature of DS neuroanatomic phenotypes~\cite{hamnerPediatricBrainDevelopment2018}.
 
-This case study aims to uncover brain ROIs that are associated with DS, using a learned score-estimates. It will incorporate MSMA, SOMs, and Spatial-MSMA to provide a cohesive analysis of structural brain MRIs belonging to a DS cohort.
+This case study aims to uncover brain ROIs that are associated with DS, using learned score-estimates. It will incorporate MSMA, SOMs, and Spatial-MSMA to provide a cohesive analysis of structural brain MRIs belonging to a DS cohort.
 
 The case study will be answering the following research questions: 
 
