--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,13 @@
+@article{kinouchi2002quick,
+  title={Quick learning for batch-learning self-organizing map},
+  author={Kinouchi, Makoto and Takada, Naoshi and Kudo, Yoshihiro and Ikemura, Toshimichi},
+  journal={Genome Informatics},
+  volume={13},
+  pages={266--267},
+  year={2002},
+  publisher={Japanese Society for Bioinformatics}
+}
+
 @article{parker2010updated,
   title={Updated national birth prevalence estimates for selected birth defects in the United States, 2004--2006},
   author={Parker, Samantha E and Mai, Cara T and Canfield, Mark A and Rickard, Russel and Wang, Ying and Meyer, Robert E and Anderson, Patrick and Mason, Craig A and Collins, Julianne S and Kirby, Russell S and others},
